removed flapper link

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js"></script>
     <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
-    <script type="text/javascript"> $('#display').flapper().val('0123456789').change(); </script>
+    <!-- <script type="text/javascript"> $('#display').flapper().val('0123456789').change(); </script> -->
 
     <!-- <script src="cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment.min.js "></script> -->
 </head>
